# sosp-paper19-ae

./: CMakeLists.txt  README.md
include/: cxlmalloc-internal.h  cxlmalloc-types.h  cxlmalloc.h  numa-config.h  recovery.h
script/: graph_trans.py  run-graph.sh  run-km-phoenix.sh  run-kmeans.sh  run-pr.sh  run-smallbank-tbb.sh  run-smallbank.sh  run-tatp-tbb.sh  run-tatp.sh  run-wc-phoenix.sh  run-wc.sh  run_all.sh  run_kv.sh  run_kv_baseline.sh  run_kv_ratio.sh  run_kv_zipf.sh  run_recovery_test.sh  run_rpc.sh  run_rpc_size.sh  run_shbench.sh  run_threadtest.sh
src/: alloc.cpp  cxl_ref.cpp  cxl_shm.cpp  hash_index.cpp  page.cpp  page_queue.cpp  recovery.cpp  segment.cpp  transfer.cpp
test/: cpu-topology.py  get-numa-config.sh  recovery_check.cpp  recovery_test.cpp  recovery_test_time.cpp  shm_init.cpp  test_api.cpp  test_helper.h  test_mbind.cpp  test_stress.cpp
test/benchmark/: AllocatorMacro.hpp  fred.h  generator.hpp  graph.cpp  kv.cpp  kv_baseline.cpp  kv_zipf.cpp  rpc_client.cpp  rpc_server.cpp  sh6bench.cpp  smallbank.cpp  smallbank_tbb.cpp  tatp.cpp  tatp.h  tatp_tbb.cpp  threadtest.cpp  zipf_gen.hpp
test/benchmark/mapreduce/: common.h  kmeans.cpp  pagerank.cpp  wordcount.cpp
